--- a/blog-client-template/css/style.css
+++ b/blog-client-template/css/style.css
@@ -3,3 +3,65 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: wheat;
+}
+
+.header {
+  width: 100%;
+  height: 15vh;
+  text-align: center;
+  padding-top: 40px;
+  border-bottom: 2px solid black;
+}
+
+.header h1 {
+  font-size: 72px;
+}
+
+.admintag {
+  position: absolute;
+  left: 90%;
+  top: 2%;
+}
+
+#container {
+  width: 100%;
+  margin: 20px auto;
+  height: 100vh;
+  /* background-color: tomato; */
+}
+
+nav {
+  width: 100%;
+  height: 10vh;
+}
+
+nav .createtag {
+  position: absolute;
+  left: 86%;
+  top: 25vh;
+}
+
+#blogposts li {
+  width: 90%;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
+  color: black;
+  justify-content: space-around;
+
+  display: flex;
+}
+
+#blogposts li p {
+  width: 450px;
+}
+
+#blogposts {
+  padding: 5px;
+}
+
